# aws-adder

./: Cargo.toml  README.md
src/: main.rs
